--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MultiplayerGame</title>
+    <link rel="stylesheet" href="client/css/normalize.css">
   </head>
   <body>
 		<div id="gameDiv"></div>
