eating other players

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="client/lib/phaser.min.js"></script>
   	<script src="/socket.io/socket.io.js"></script>
   	<script src="client/player.js"></script>
-  	<script src="client/main.js"></script>
+  	<script src="client/collide.js"></script>
+    <script src="client/main.js"></script>
 	</body>
 </html>
